<resources>
    <string name="app_name" translatable="false">Foundation App</string>
    <string name="alertmessage">some options are remaining</string>
    <string name="ParaReadQues">प्ले बटन पर क्लिक कीजिए और सुनिए। फिर माइक बटन पर क्लिक कीजिए और अनुच्छेद पढ़िए।|</string>
    <string name="parasummary">कहानी को हिंदी में दोहराएं</string>
    <string name="paraqa">माइक बटन पर क्लिक कीजिए। जवाब रिकॉर्ड करके सबमिट कीजिए।</string>
    <string name="new_chit_chat_1">स्क्रीन पर दिए गए संभाषण को सुनो|</string>
    <string name="new_chit_chat_2">स्क्रीन पर दिए संभाषण का जवाब अंग्रेजी में रिकॉर्ड करें।</string>
    <string name="new_chit_chat_3">यह गेम दो लोग खेलें। एक-एक करके अपनी बात रिकॉर्ड करें।</string>
    <string name="Login">लॉगिन करा</string>
    <string name="Stt_Dialog_Msg">चांगला प्रतिसाद मिळवण्यासाठी कृपया ऑफलाइन भाषा पॅक डाउनलोड करा.</string>
    <string name="Okay">ठीक आहे</string>
    <string name="Skip">वगळा</string>
    <string name="loding_please_wait">लोड होत आहे. कृपया प्रतिक्षा करा...</string>
    <string name="Exit">बाहेर पडा</string>
    <string name="Cancel">रद्द करा</string>
    <string name="Restart">पुन्हा सुरू करा</string>
    <string name="login_mode">लॉगिन मोड</string>
    <string name="Group">गट लॉगिन</string>
    <string name="Individual">वैयक्तिक लॉगिन</string>
    <string name="what_do_you_want_to_do">तुम्हाला काय करायचे आहे?</string>
    <string name="Scan_QR_Code">क्यू आर कोड स्कॅन करा.</string>
    <string name="Reset">रीसेट</string>
    <string name="Get_Progress">प्रगती तपासा</string>
    <string name="Start">सुरु करा</string>
    <string name="No_Internet_Connection">इंटरनेट जोडा.</string>
    <string name="Invalid_QR_Code">अवैध क्यू आर कोड!!!</string>
    <string name="Only_5_Students_Allowed">केवळ 5 विद्यार्थ्यांनाच परवानगी आहे.</string>
    <string name="Student_exists">हा विद्यार्थी आधीपासून अस्तित्वात आहे</string>
    <string name="Scan_new_QR">नवीन क्यू आर स्कॅन करा.</string>
    <string name="Welcome">तुमचं स्वागत आहे.</string>
    <string name="select_subject">कृपया कोणताही एक विषय निवडा.</string>
    <string name="usage">वापर</string>
    <string name="days">दिवस</string>
    <string name="hours">तास</string>
    <string name="progress">प्रगती</string>
    <string name="Test_Complete_Dialog">तुम्ही प्रोफाइल या विभागात प्रमाणपत्रे पाहू शकता.</string>
    <string name="selectGroup" >गट निवडा</string>
    <string name="select_Age" >वयोगट निवडा</string>
    <string name="select_Name" >स्वतःचे नाव निवडा</string>
    <string name="age_8_and_above">वय वर्षे 8 आणि त्याहून अधिक.</string>
    <string name="Summary">सारांश</string>
    <string name="Progress">प्रगती</string>
    <string name="Certificates">प्रमाणपत्रे</string>
    <string name="Click_group_name" >तुमच्या गटाच्या नावावर क्लिक करा.</string>
    <string name="mark_attendance" >आपली उपस्थिती नोंदवा.</string>
    <string name="Learning" >शिकणे</string>
    <string name="Practice" >सराव</string>
    <string name="Test" >परीक्षा</string>
    <string name="Fun" >मजा</string>
    <string name="Profile" >प्रोफाइल</string>
    <string name="Level" >स्तर</string>
    <string name="read_full_sentence" >वाक्य पूर्ण वाचा. </string>
    <string name="Revise" >सुधारणा करा.</string>
    <string name="Next" >पुढे</string>
    <string name="nice_chatting_with_you" >तुमच्याशी बोलून छान वाटले.</string>
    <string name="byebye" >टाटा!</string>
    <string name="Unsupervised">देखरेखीविना</string>
    <string name="Supervised">देखरेखीखाली</string>
    <string name="change_subj">विषय बदलायचा आहे का?</string>
    <string name="save">जतन करा</string>
    <string name="restart_dialog_msg" >तुम्हाला पुन्हा सुरु करायचे आहे का? </string>
    <string name="exit_dialog_msg" >तुम्हाला बाहेर पडायचे आहे का? </string>
    <string name="Next_activity">पुढील उपक्रम?</string>
    <string name="Do_you_want_to_exit">तुम्हाला बाहेर पडायचे आहे का? </string>
    <string name="activity_completed">उपक्रम पूर्ण झाला</string>
    <string name="hint">इशारा</string>
    <string name="clear">बदल रद्द करा.</string>
    <string name="submit">सबमिट</string>
    <string name="hide_hint">इशारा बंद करा</string>
    <string name="Enter_answer">उत्तर नोंद करा.</string>
    <string name="Your_answer">तुमचे उत्तर</string>
    <string name="Result">निकाल</string>
    <string name="You_answered">दिलेले उत्तर</string>
    <string name="Correct_Answer">बरोबर उत्तर</string>
    <string name="Skipped">वगळले</string>
    <string name="Read">वाचा</string>
    <string name="Paragraph">परिच्छेद : </string>
    <string name="Keyword">महत्वाचा शब्द : </string>
    <string name="usermessage">आता मुख्य शब्द निवडण्याची तुमची पाळी आहे.</string>
    <string name="yes">होय</string>
    <string name="no">नाही</string>
    <string name="fact_retrieval_click">जवाब देने के लिएअनुच्छेद से सही शब्द या वाक्य चुनिए|</string>
    <string name="factRetrieval">उत्तर देण्यासाठी परिच्छेदामधील योग्य शब्द किंवा वाक्य निवडा.</string>
    <string name="IKWAndroid">दिलेल्या परिच्छेदामधले वैज्ञानिक शब्द दाखवा.</string>
    <string name="CopyWriting">दिलेले शब्द आणि त्यांची माहिती वहीत लिहा आणि त्याचा फोटो सबमिट करा.</string>
    <string name="chKeywords">दिलेल्या शब्दांमधून संबंधित शब्द निवडा.</string>
    <string name="ShowMeAndroid">योग्य पर्याय निवडा.</string>
    <string name="Dictation">ऑडिओ ऐकून वहीत लिहा आणि त्याचा फोटो सबमिट करा.</string>
    <string name="PictAndroid">प्ले बटणावर क्लिक करा आणि ऐका. नंतर माइक बटणावर क्लिक करा आणि स्पष्ट आवाजात वाचा.</string>
    <string name="ReadingAndroid">प्ले बटणावर क्लिक करा आणि ऐका. नंतर माइक बटणावर क्लिक करा आणि स्पष्ट आवाजात वाचा.</string>
    <string name="TAW">दिलेला शब्द किंवा वाक्यावर आपली मते लिहा आणि त्याचा फोटो सबमिट करा.</string>
    <string name="doing_act">माइक बटणावर क्लिक करून आपले उत्तर रेकॉर्ड करा आणि सबमिट करा.</string>
    <string name="letter">दिलेल्या विषयावर पत्र लिहून त्याचा फोटो सबमिट करा.</string>
    <string name="doing_act_video">माइक बटन पर क्लिक करके अपना उत्तर रिकॉर्ड कीजिए और सबमिट कीजिए|</string>
    <string name="ReadVocabAndroid">प्ले बटणावर क्लिक करा आणि ऐका. नंतर माइक बटणावर क्लिक करा आणि स्पष्ट आवाजात वाचा.</string>
    <string name="reading_stt">माइक बटणावर क्लिक करा. उत्तर रेकॉर्ड करा आणि सबमिट करा.</string>
    <string name="multiple_choice">उत्तर देण्यासाठी दिलेल्या शब्दांमधून योग्य पर्याय निवडा.</string>
    <string name="Video">व्हिडीओ पहा.</string>
    <string name="watching_video">माइक बटणावर क्लिक करून आपले उत्तर रेकॉर्ड करा आणि सबमिट करा.</string>
    <string name="Agent_name" translatable="false">Vernicula</string>
    <string name="talkbot" translatable="false">Talkbot</string>
    <string name="more" translatable="false">more</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_level_wise_words" translatable="false">LevelWiseWordsActivity</string>
    <string name="title_activity_admin_panel" translatable="false">AdminPanelActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message" translatable="false">City of Stories - PraDigi</string>
    <string name="read_india" translatable="false">Read India</string>
    <string name="hybrid_learning" translatable="false">Hybrid Learning</string>
    <string name="second_chance" translatable="false">Second Chance</string>
    <string name="ECE" translatable="false">ECE</string>
    <string name="pratham_institute" translatable="false">Pratham Institute</string>
    <string name="urbon_program" translatable="false">Urban programme</string>
    <string name="title_activity_push_data" translatable="false">PushDataActivity</string>
    <string name="top_sheet_behavior" translatable="false">com.pratham.prathamdigital.custom.topsheet.TopSheetBehavior</string>
    <string name="switch_off_mobile_hotspot" translatable="false">Please switch off the mobile data and try again.</string>
    <string name="change" translatable="false">Change</string>
    <string name="content_download_alert" translatable="false">Content will be downloaded in</string>
    <string name="nsd_servername_postfix" translatable="false">FTP Server</string>
    <string name="storage_warning" translatable="false">Warning: storage is not available. You may want to unmount it.</string>
    <string name="notification_server_starting" translatable="false">Starting at %s</string>
    <string name="notification_title" translatable="false">FTP Server is running</string>
    <string name="notification_text" translatable="false">at %s</string>
    <string name="notification_stop_text" translatable="false">Stop Server</string>
    <string name="notif_settings_text" translatable="false">Settings</string>
    <string name="swiftp_name" translatable="false">FTP Server</string>
    <string name="share" translatable="false">Create</string>
    <string name="recieve" translatable="false">Join</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="Open" translatable="false">Open</string>
    <string name="downloading" translatable="false">Downloading...</string>
    <string name="download" translatable="false">Download</string>
    <string name="age_3_to_6" translatable="false">Age 3 to 6</string>
    <string name="age_8_to_14" translatable="false">Age 8 to 14</string>
    <string name="title_activity_home_" translatable="false">Home_Activity</string>
    <string name="title_activity_keyword_mapping" translatable="false">KeywordMapping</string>
    <string-array name="no_data">
        <item>Sorry ... No Data Available ...</item>
    </string-array>
    <string name="pref_auto_filter" translatable="false">pref_auto_filter</string>
    <string name="pref_log_level" translatable="false">pref_log_level</string>
    <string name="pref_tag_filter" translatable="false">pref_tag_filter</string>
    <string name="pref_tag_filter_set" translatable="false">pref_tag_filter_set</string>
    <string name="pref_text_opacity" translatable="false">pref_text_opacity</string>
    <string name="pref_bg_opacity" translatable="false">pref_bg_opacity</string>
    <string name="pref_text_size" translatable="false">pref_text_size</string>
    <string name="pref_info_open_source" translatable="false">pref_info_open_source</string>
    <string name="pref_version" translatable="false">pref_version</string>
    <string name="pref_root_fail_count" translatable="false">pref_root_fail_count</string>
    <string name="permission_read_logs_description" translatable="false">Allows an application to read the logcat output for Ghost Log integrated apps. This allows it to discover general information about integrated apps that is being written to the log.</string>
    <string name="permission_read_logs_label" translatable="false">read logcat output for Ghost Log integrated apps</string>
    <string name="share_subject" translatable="false">Logcat Output</string>
    <string name="canned_integration_log_line" translatable="false">I GhostLog: Running in Integration Mode</string>
    <string name="notification_title_log" translatable="false">Log service is active</string>
    <string name="play" translatable="false">Play</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="share_share" translatable="false">Share</string>
    <string name="log_level" translatable="false">Log Level</string>
    <string name="tag_filter" translatable="false">Tag Filter</string>
    <string name="no_filter" translatable="false">No Filter</string>
    <string name="auto_filter" translatable="false">Auto Filter</string>
    <string name="auto_filter_summary" translatable="false">Show foreground process only</string>
    <string name="off" translatable="false">Off</string>
    <string name="none" translatable="false">None</string>
</resources>