<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bkgd"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <RelativeLayout
        style="@style/paragraph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="3">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/para_tv"
            android:fadeScrollbars="false"
            android:scrollbarSize="6dp"
            android:scrollbarThumbVertical="@drawable/card_color_bg4"
            android:scrollbarTrackVertical="@drawable/scroll_bg">

            <com.nex3z.flowlayout.FlowLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:scrollbars="vertical"
                app:flChildSpacing="10dp" />
        </ScrollView>

        <com.pratham.foundation.customView.fontsview.SansTextViewBold
            android:id="@+id/para_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Paragraph"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resultLayout"
        style="@style/paragraph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1.5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/keywords_tv"
            android:fadeScrollbars="false"
            android:paddingHorizontal="10dp"
            android:scrollbarSize="6dp"
            android:scrollbarThumbVertical="@drawable/card_color_bg4"
            android:scrollbarTrackVertical="@drawable/scroll_bg">

            <com.nex3z.flowlayout.FlowLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/keywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flChildSpacingForLastRow="align"
                app:flRowSpacing="2dp" />
        </ScrollView>

        <com.pratham.foundation.customView.fontsview.SansTextViewBold
            android:id="@+id/keywords_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Keyword"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <com.pratham.foundation.customView.fontsview.SansButton
            android:id="@+id/show_me_keywords"
            style="@style/submitbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_yellow"
            android:text="@string/hint" />

        <com.pratham.foundation.customView.fontsview.SansButton
            android:id="@+id/btn_submit"
            style="@style/submitbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>