<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="@dimen/_285sdp"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:elevation="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_15sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dl_lottie_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lottie_correct.json"
            app:lottie_loop="true" />

        <com.pratham.foundation.customView.fontsview.SansTextViewBold
            android:id="@+id/dia_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dl_lottie_view"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/Stt_Dialog_Msg"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.pratham.foundation.customView.fontsview.SansTextViewBold
                android:id="@+id/dia_btn_skip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/Skip"
                android:textColor="@color/strokeColor"
                android:textSize="@dimen/_15sdp" />

            <com.pratham.foundation.customView.fontsview.SansButton
                android:id="@+id/dia_btn_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/button_green"
                android:elevation="@dimen/_3sdp"
                android:text="@string/Okay"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.card.MaterialCardView>