<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_195sdp"
        android:layout_centerInParent="true"
        android:background="@color/full_transparent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_file_trans"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:elevation="5dp"
            app:actualImageScaleType="fitXY"
            app:placeholderImage="@drawable/khelbadi_thumb"
            app:placeholderImageScaleType="fitCenter"
            app:roundedCornerRadius="@dimen/_12sdp"
            app:roundingBorderColor="@color/red_btn_bg_color"
            app:roundingBorderWidth="@dimen/_2sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:background="@drawable/dialog_bg"
            android:gravity="center">

            <com.pratham.foundation.customView.fontsview.SansTextViewBold
                android:id="@+id/dia_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/_10sdp"
                android:gravity="center"
                android:lines="2"
                android:paddingHorizontal="@dimen/_7sdp"
                android:text="@string/what_do_you_want_to_do"
                android:textColor="@color/colorRedDark"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:elevation="5dp"
            android:gravity="center">


            <com.pratham.foundation.customView.fontsview.SansButton
                android:id="@+id/dia_btn_green"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/button_green"
                android:elevation="5dp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <com.pratham.foundation.customView.fontsview.SansButton
                android:id="@+id/dia_btn_red"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_toRightOf="@id/dia_btn_green"
                android:background="@drawable/button_red"
                android:elevation="5dp"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/exit_ib"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentRight="true"
            android:background="@color/full_transparent"
            android:padding="@dimen/_3sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/credits_icon"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>